# uol_capstone_project

./: .gitignore  .tool-versions  LICENSE  README.md  env.toml  pyproject.toml
data/datasets/CUAD/: cuad.ipynb
