[project]
name = "uol-capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "pyarrow==24.0.0",
    "seaborn==0.13.2",
    "spacy==3.8.13",
    "textstat==0.7.13",
    "jupyterlab==4.5.8",
    "polars==1.41.2",
    "transformers==5.10.2",
    "click==8.0.4",
    "click-completion>=0.5.2",
]
